# filemover

backend/: .env  .pre-commit-config.yaml  pyproject.toml
backend/.github/workflows/: interrogate.yml  semgrep.yml
backend/.semgrep/: semgrep-disallow-mutable-default-parameters.yml  semgrep-found-requirement-without-version.yml  semgrep-not-item-in-container.yml  semgrep-use-is-true.yml  semgrep_prevent_use_of_eval.yml
backend/Backend/: settings.py  urls.py
backend/api/: helpers.py  models.py  serializers.py  urls.py  utils.py  views.py
django_filemover/: .isort.cfg  .pre-commit-config.yaml  README.md  setup.cfg
django_filemover/.github/workflows/: black.yml  flake8.yml
django_filemover/.semgrep/: semgrep-code-incomplete.yml  semgrep-custom-resolve.yml  semgrep-custom-reverse.yml  semgrep-datetime-now.yml  semgrep-debugger-found.yml  semgrep-not-item-is.yml  semgrep-print-statement.yml  semgrep-string-equals-without-case-insensitivity.yml
django_filemover/filemover/: apps.py  models.py  urls.py  utils.py
django_filemover/filemover/api/: serializers.py  views.py
django_filemover/test_app/: settings.py  urls.py
ui/: .env  .npmrc  newfile.txt  package-lock.json  package.json  vue.config.js
ui/src/: App.vue  main.js  project.css  style.css
ui/src/components/: ConfiguringJobs.vue  FileMoverHome.vue  HeaderView.vue  HelloWorld.vue  JobExecution.vue  JobHistory.vue  JobTermination.vue  NavigationDrawer.vue  RightPanel.vue  TerminatingJobs.vue  TriggeringJobs.vue
ui/src/router/: index.js
ui/src/views/: About.vue  Home.vue
